additional methods in swagger doc
